--- a/app/src/main/res/xml/activity_play_scene.xml
+++ b/app/src/main/res/xml/activity_play_scene.xml
@@ -15,7 +15,7 @@
 
     <ConstraintSet android:id="@id/end">
         <Constraint
-            android:id="@id/bpvpv"
+            android:id="@id/bpvwv"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
