--- a/app/src/main/res/layout/activity_user_space.xml
+++ b/app/src/main/res/layout/activity_user_space.xml
@@ -63,6 +63,16 @@
                 android:layout_toEndOf="@id/iv_sex" />
 
             <TextView
+                android:id="@+id/tv_uid"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tv_name"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginTop="2dp"
+                android:textIsSelectable="true"
+                android:textSize="12sp" />
+
+            <TextView
                 android:id="@+id/tv_sign"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
