--- a/app/src/main/res/layout/fragment_play_intro.xml
+++ b/app/src/main/res/layout/fragment_play_intro.xml
@@ -80,18 +80,18 @@
                     android:id="@+id/tv_watched"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:drawableStart="@drawable/ic_play"
                     android:drawablePadding="2dp"
-                    android:textSize="12sp" />
+                    android:textSize="12sp"
+                    app:drawableStartCompat="@drawable/ic_play" />
 
                 <TextView
                     android:id="@+id/tv_danmakuHas"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
-                    android:drawableStart="@drawable/ic_danmaku"
                     android:drawablePadding="2dp"
-                    android:textSize="12sp" />
+                    android:textSize="12sp"
+                    app:drawableStartCompat="@drawable/ic_danmaku" />
 
                 <TextView
                     android:id="@+id/tv_uptime"
@@ -147,36 +147,36 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:drawableTop="@drawable/ic_like"
                     android:drawablePadding="2dp"
                     android:foreground="?selectableItemBackground"
                     android:gravity="center_horizontal"
                     android:text="@string/like"
-                    android:textSize="12sp" />
+                    android:textSize="12sp"
+                    app:drawableTopCompat="@drawable/ic_like" />
 
                 <TextView
                     android:id="@+id/tv_dislike"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:drawableTop="@drawable/ic_dislike"
                     android:drawablePadding="2dp"
                     android:foreground="?selectableItemBackground"
                     android:gravity="center_horizontal"
                     android:text="@string/dislike"
-                    android:textSize="12sp" />
+                    android:textSize="12sp"
+                    app:drawableTopCompat="@drawable/ic_dislike" />
 
                 <TextView
                     android:id="@+id/tv_coin"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:drawableTop="@drawable/ic_b_bi"
                     android:drawablePadding="2dp"
                     android:foreground="?selectableItemBackground"
                     android:gravity="center_horizontal"
                     android:text="@string/coins"
-                    android:textSize="12sp" />
+                    android:textSize="12sp"
+                    app:drawableTopCompat="@drawable/ic_b_bi" />
 
                 <TextView
                     android:id="@+id/tv_favorite"
