--- a/app/src/main/res/layout/activity_danmaku_test.xml
+++ b/app/src/main/res/layout/activity_danmaku_test.xml
@@ -7,7 +7,7 @@
         android:layout_height="match_parent"
         android:background="@android:color/black">
 
-        <master.flame.danmaku.ui.widget.DanmakuView
+        <com.duzhaokun123.danmakuview.ui.DanmakuView
             android:id="@+id/dv"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
