--- a/app/src/main/res/layout/layout_player_overlay.xml
+++ b/app/src/main/res/layout/layout_player_overlay.xml
@@ -21,5 +21,12 @@
             android:background="@android:color/black"
             tools:ignore="ContentDescription" />
 
+        <ProgressBar
+            android:id="@+id/pb"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:visibility="gone" />
+
     </RelativeLayout>
 </layout>
