--- a/app/src/main/res/menu/settings_user.xml
+++ b/app/src/main/res/menu/settings_user.xml
@@ -6,4 +6,7 @@
     <item
         android:id="@+id/delete"
         android:title="@string/delete" />
+    <item
+        android:id="@+id/user_space"
+        android:title="@string/user_space" />
 </menu>
